--- a/web/static/css/sb-admin.css
+++ b/web/static/css/sb-admin.css
@@ -11,13 +11,23 @@ body {
     background-image: white
 }
 
-.margin-top-10{margin-top:10px !important;}
-.margin-top-20{margin-top:20px !important;}
-.padding-left-30{padding-left:30px !important}
-.radio-main td { padding: 5px;}
+.margin-top-10 {
+    margin-top: 10px !important;
+}
 
+.margin-top-20 {
+    margin-top: 20px !important;
+}
 
-@media(min-width:768px) {
+.padding-left-30 {
+    padding-left: 30px !important
+}
+
+.radio-main td {
+    padding: 5px;
+}
+
+@media (min-width: 768px) {
     body {
         margin-top: 10px;
     }
@@ -38,7 +48,7 @@ body {
     line-height: normal;
 }
 
-@media(min-width:768px) {
+@media (min-width: 768px) {
     #wrapper {
         padding-left: 225px;
     }
@@ -54,40 +64,40 @@ body {
     padding: 0 15px;
 }
 
-.top-nav>li {
+.top-nav > li {
     display: inline-block;
     float: left;
 }
 
-.top-nav>li>a {
+.top-nav > li > a {
     padding-top: 15px;
     padding-bottom: 15px;
     line-height: 20px;
     color: #999;
 }
 
-.top-nav>li>a:hover,
-.top-nav>li>a:focus,
-.top-nav>.open>a,
-.top-nav>.open>a:hover,
-.top-nav>.open>a:focus {
+.top-nav > li > a:hover,
+.top-nav > li > a:focus,
+.top-nav > .open > a,
+.top-nav > .open > a:hover,
+.top-nav > .open > a:focus {
     color: #fff;
     background-color: #000;
 }
 
-.top-nav>.open>.dropdown-menu {
+.top-nav > .open > .dropdown-menu {
     float: left;
     position: absolute;
     margin-top: 0;
-    border: 1px solid rgba(0,0,0,.15);
+    border: 1px solid rgba(0, 0, 0, .15);
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     background-color: #fff;
-    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
-    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
 }
 
-.top-nav>.open>.dropdown-menu>li>a {
+.top-nav > .open > .dropdown-menu > li > a {
     white-space: normal;
 }
 
@@ -100,10 +110,10 @@ ul.message-dropdown {
 
 li.message-preview {
     width: 275px;
-    border-bottom: 1px solid rgba(0,0,0,.15);
+    border-bottom: 1px solid rgba(0, 0, 0, .15);
 }
 
-li.message-preview>a {
+li.message-preview > a {
     padding-top: 15px;
     padding-bottom: 15px;
 }
@@ -118,7 +128,7 @@ ul.alert-dropdown {
 
 /* Side Navigation */
 
-@media(min-width:768px) {
+@media (min-width: 768px) {
     .side-nav {
         position: fixed;
         top: 51px;
@@ -133,8 +143,12 @@ ul.alert-dropdown {
         overflow-x: hidden;
         padding-bottom: 40px;
     }
-    .side-nav li {list-style: none}
-    .side-nav>li>a {
+
+    .side-nav li {
+        list-style: none
+    }
+
+    .side-nav > li > a {
         width: 225px;
         padding-top: 10px;
         padding-bottom: 10px;
@@ -146,21 +160,20 @@ ul.alert-dropdown {
         background-color: #000 !important;
     }
 
-
 }
 
-.side-nav>li>ul {
+.side-nav > li > ul {
     padding: 0;
 }
 
-.side-nav>li>ul>li>a, .side-nav>li>ul>li>ul>li>a{
+.side-nav > li > ul > li > a, .side-nav > li > ul > li > ul > li > a {
     display: block;
     padding: 5px 15px 5px 38px;
     text-decoration: none;
     color: #999;
 }
 
-.side-nav>li>ul>li>a:hover,.side-nav>li>ul>li>ul>li>a:hover {
+.side-nav > li > ul > li > a:hover, .side-nav > li > ul > li > ul > li > a:hover {
     color: #000;
 }
 
@@ -241,56 +254,64 @@ ul.alert-dropdown {
     border-color: #e74c3c;
 }
 
-.navbar-kslife .top-nav>li>a{
-    color:white;
+.navbar-kslife .top-nav > li > a {
+    color: white;
 }
 
-.navbar{
+.navbar {
     min-height: 50px;
 }
 
-.navbar-brand{
+.navbar-brand {
     height: 50px;
 }
 
-.navbar-kslife .top-nav>li>a:hover, .navbar-kslife .top-nav>li>a:focus,.navbar-kslife .top-nav>.open>a,.navbar-kslife .top-nav>.open>a:hover,.navbar-kslife .top-nav>.open>a:focus {
+.navbar-kslife .top-nav > li > a:hover, .navbar-kslife .top-nav > li > a:focus, .navbar-kslife .top-nav > .open > a, .navbar-kslife .top-nav > .open > a:hover, .navbar-kslife .top-nav > .open > a:focus {
     color: #fff;
     background-color: #c0392b;
-    color:white;
+    color: white;
 }
 
-.navbar-brand{padding:2px;}
-.navbar-brand img{height:100%;}
+.navbar-brand {
+    padding: 2px;
+}
 
-.navbar-sidebar a{color:#666}
+.navbar-brand img {
+    height: 100%;
+}
 
-.navbar-kslife .side-nav>li>ul>li>a:hover {
+.navbar-sidebar a {
+    color: #666
+}
+
+.navbar-kslife .side-nav > li > ul > li > a:hover {
     color: #000;
 }
 
-
 .page-header {
-    font-size:35px;
+    font-size: 35px;
     margin: 26px 0 23px;
 }
 
-@media (min-width: 768px){
+@media (min-width: 768px) {
     .navbar-sidebar .side-nav li a:hover, .side-nav li a:focus {
         outline: none;
         background-color: white !important;
     }
 }
 
-.jqx-input-metro,.jqx-combobox-input-metro{
+.jqx-input-metro, .jqx-combobox-input-metro {
     padding: 0.5% !important;
     width: 99% !important;
     font-size: 15px !important;
 }
 
-.jqx-combobox-metro,.jqx-input-content-metro{width:100% !important;}
+.jqx-combobox-metro, .jqx-input-content-metro {
+    width: 100% !important;
+}
 
-.jqx-datetimeinput-metro{
-    height:20px !important;
+.jqx-datetimeinput-metro {
+    height: 20px !important;
 }
 
 .form-horizontal .form-group {
@@ -298,13 +319,22 @@ ul.alert-dropdown {
     margin-left: 0;
 }
 
-.jqx-action-button-metro{padding-left: 5px;}
+.jqx-action-button-metro {
+    padding-left: 5px;
+}
 
-.jqx-widget-content-metro,.jqx-rc-all-metro{margin-top:0px !important}
+.jqx-widget-content-metro, .jqx-rc-all-metro {
+    margin-top: 0px !important
+}
 
-.jqx-action-button-metro{right:0;left: auto !important;}
+.jqx-action-button-metro {
+    right: 0;
+    left: auto !important;
+}
 
-.checkbox label, .radio label{padding-left:0;}
+.checkbox label, .radio label {
+    padding-left: 0;
+}
 
 .form-horizontal .checkbox, .form-horizontal .checkbox-inline, .form-horizontal .radio, .form-horizontal .radio-inline {
     padding-bottom: 7px;
@@ -314,16 +344,19 @@ ul.alert-dropdown {
 .navbar-kslife .icon-bar {
     background-color: #fff;
 }
+
 .panel-kslife {
     border-color: #e74c3c;
 }
-.panel-kslife .panel-heading{
+
+.panel-kslife .panel-heading {
     background-color: #e74c3c;
     border-color: #e74c3c;
     text-align: center;
     font-weight: bold;
     color: white;
 }
+
 .checkbox {
     padding-top: 8px;
     margin-left: 30px;
@@ -343,6 +376,7 @@ ul.alert-dropdown {
     bottom: 0;
     right: 0;
 }
+
 .shader {
     width: 100%;
     height: 100%;
@@ -354,6 +388,7 @@ ul.alert-dropdown {
     position: fixed;
     display: none;
 }
+
 #divLoading3 {
     border-radius: 8px;
     margin: auto;
