--- a/web/static/css/sb-admin.css
+++ b/web/static/css/sb-admin.css
@@ -249,12 +249,12 @@ ul.alert-dropdown {
     color: #df8a13;
 }
 
-.navbar-kslife {
+.navbar-cooperate {
     background-color: #e74c3c;
     border-color: #e74c3c;
 }
 
-.navbar-kslife .top-nav > li > a {
+.navbar-cooperate .top-nav > li > a {
     color: white;
 }
 
@@ -262,18 +262,29 @@ ul.alert-dropdown {
     min-height: 50px;
 }
 
+.
 .navbar-brand {
     height: 50px;
 }
 
-.navbar-kslife .top-nav > li > a:hover, .navbar-kslife .top-nav > li > a:focus, .navbar-kslife .top-nav > .open > a, .navbar-kslife .top-nav > .open > a:hover, .navbar-kslife .top-nav > .open > a:focus {
-    color: #fff;
-    background-color: #c0392b;
+.navbar-cooperate a {
     color: white;
+    text-decoration: none;
 }
 
-.navbar-brand {
-    padding: 2px;
+.navbar-cooperate > li > a:focus, .nav > li > a:hover {
+    text-decoration: none;
+    background-color: #B73737;
+}
+
+.navbar-cooperate .open > a, .navbar-cooperate .open > a:focus, .navbar-cooperate .open > a:hover {
+    background-color: #B73737;
+    border-color: #337ab7;
+}
+
+.navbar-cooperate .top-nav > li > a:hover, .navbar-cooperate .top-nav > li > a:focus, .navbar-cooperate .top-nav > .open > a, .navbar-cooperate .top-nav > .open > a:hover, .navbar-cooperate .top-nav > .open > a:focus {
+    background-color: #B73737;
+    color: white;
 }
 
 .navbar-brand img {
@@ -284,7 +295,7 @@ ul.alert-dropdown {
     color: #666
 }
 
-.navbar-kslife .side-nav > li > ul > li > a:hover {
+.navbar-cooperate .side-nav > li > ul > li > a:hover {
     color: #000;
 }
 
@@ -341,15 +352,15 @@ ul.alert-dropdown {
     padding-top: 0;
 }
 
-.navbar-kslife .icon-bar {
+.navbar-cooperate .icon-bar {
     background-color: #fff;
 }
 
-.panel-kslife {
+.panel-cooperate {
     border-color: #e74c3c;
 }
 
-.panel-kslife .panel-heading {
+.panel-cooperate .panel-heading {
     background-color: #e74c3c;
     border-color: #e74c3c;
     text-align: center;
