--- a/web/static/css/site.css
+++ b/web/static/css/site.css
@@ -1,101 +1,496 @@
-body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+/* Login Screen */
+body.login, html.login {
+    width: 100%;
+    height: 100%;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+.scrollbar {
+    position: relative;
+    overflow-y: auto;
+    max-height: 550px;
 }
 
-#login-form {
-    margin: 0 auto;
+a {
+    cursor: pointer;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists
-   will truncate terms that are too long to fit in the left column
-*/
-.dl-horizontal dt {
-    white-space: normal;
+.login-container {
+    display: inline-table;
+    vertical-align: middle;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 0;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
+.login-container .row, .login-container .row .col-md-12 {
+    height: 100%;
+    width: 100%;
+    display: table-cell;
+}
 
-div[role='row'] div:last-child, tr[role='row'] td:last-child {
+.login-container section {
+    padding: 20px 20px 10px 20px;
+    border-radius: 0 0 4px 4px;
+}
+
+.login-container .welcome {
+    position: absolute;
+    bottom: 0;
+    padding: 1% 2%;
+    text-shadow: 0 0 5px rgba(1, 1, 1, .6);
+}
+
+.login-container .welcome h5 {
+    font-size: 12px;
+}
+
+.login-container .logo {
+    width: 45%;
+    display: block;
+}
+
+.login-container .well {
+    height: 100%;
+    background-color: white;
+    background-image: url('../img/logo-mini.png');
+    background-position: center 95%;
+    background-size: 35%;
+    background-repeat: no-repeat;
+    padding: 60px 30px;
+    border: 0;
+    margin: 0;
+    float: right;
+    box-shadow: 0 0 20px rgba(1, 1, 1, 0.5);
+    transition: all 1s;
+}
+
+.login-container .well:hover {
+    box-shadow: 0 0 150px rgba(1, 1, 1, 0.5);
+}
+
+.login-container .well legend {
+    font-size: 26px;
     text-align: center;
+    font-weight: 300;
 }
 
-div[role='row'] div:last-child button.btn, tr[role='row'] td:last-child button.btn {
-    margin: 5px 5px 0;
+.dropdown-submenu {
+    position: relative;
 }
 
-.toolbar-container {
-    margin: 5px 10px;
+.dropdown-submenu > .dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px;
+    border-radius: 0 6px 6px 6px;
 }
 
-/*.jqx-input:hover,.jqx-input:focus {
-    border: 1px solid #1FAEFF;
-}*/
-.glyphicon-refresh-animate {
-    -animation: spin .7s infinite linear;
-    -ms-animation: spin .7s infinite linear;
-    -webkit-animation: spinw .7s infinite linear;
-    -moz-animation: spinm .7s infinite linear;
+.dropdown-submenu:hover > .dropdown-menu {
+    display: block;
 }
 
-@keyframes spin {
-    from {
-        transform: scale(1) rotate(0deg);
+.dropdown-submenu > a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #ccc;
+    margin-top: 5px;
+    margin-right: -10px;
+}
+
+.dropdown-submenu:hover > a:after {
+    border-left-color: #fff;
+}
+
+.dropdown-submenu.pull-left {
+    float: none;
+}
+
+.dropdown-submenu.pull-left > .dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
+}
+
+.dropdown-menu .sub-menu {
+    left: 100%;
+    position: absolute;
+    top: 0;
+    visibility: hidden;
+    margin-top: -1px;
+}
+
+.dropdown-menu li:hover .sub-menu {
+    visibility: visible;
+    display: block;
+}
+
+.navbar .sub-menu:before {
+    border-bottom: 7px solid transparent;
+    border-left: none;
+    border-right: 7px solid rgba(0, 0, 0, 0.2);
+    border-top: 7px solid transparent;
+    left: -7px;
+    top: 10px;
+}
+
+.navbar .sub-menu:after {
+    border-top: 6px solid transparent;
+    border-left: none;
+    border-right: 6px solid #fff;
+}
+
+/* Layout */
+
+body.layout {
+    background: rgba(255, 255, 255, 1);
+    background: -moz-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 1) 47%, rgba(237, 237, 237, 1) 100%);
+    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255, 255, 255, 1)), color-stop(47%, rgba(246, 246, 246, 1)), color-stop(100%, rgba(237, 237, 237, 1)));
+    background: -webkit-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 1) 47%, rgba(237, 237, 237, 1) 100%);
+    background: -o-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 1) 47%, rgba(237, 237, 237, 1) 100%);
+    background: -ms-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 1) 47%, rgba(237, 237, 237, 1) 100%);
+    background: radial-gradient(ellipse at center, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 1) 47%, rgba(237, 237, 237, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed', GradientType=1);
+}
+
+.navbar-brand > img {
+    margin-top: 5px;
+}
+
+body.layout .navbar-brand.imagelogo {
+    padding: 4px 10px
+}
+
+body.layout .navbar-brand.imagelogo img {
+    height: 100%
+}
+
+body.layout .container .row .well {
+    margin: 0 10px 20px 10px;
+    padding: 19px 40px;
+    display: table;
+}
+
+body.layout .copyright {
+    padding-top: 30px;
+    margin: 20px 0 10px 0;
+    border-top: 1px solid #dddddd;
+}
+
+body.layout .copyright .logo {
+    max-height: 30px;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    opacity: .3;
+    transition: opacity .3s, grayscale .3s;
+}
+
+body.layout .copyright .logo:hover {
+    -webkit-filter: grayscale(0%);
+    filter: grayscale(0%);
+    opacity: 1;
+}
+
+@media (max-width: 992px) {
+    body.layout .container .row .well {
+        margin: -20px 0 0 0;
+        padding: 6px 20px;
+        border: 0;
     }
 
-    to {
-        transform: scale(1) rotate(360deg);
+    body.layout h1, body.layout .h1 {
+        font-size: 25px;
+    }
+
+    body.layout h5, body.layout .h5 {
+        font-size: 12px;
+    }
+
+    .login-container .well {
+        padding: 30px 15px;
+        display: table;
+    }
+
+    .login-container .row, .login-container .row .col-md-12 {
+        display: table;
+        margin: 0;
     }
 }
 
-@-webkit-keyframes spinw {
-    from {
-        -webkit-transform: rotate(0deg);
-    }
-
-    to {
-        -webkit-transform: rotate(360deg);
-    }
+.fullmultiSelect {
+    display: block
 }
 
-@-moz-keyframes spinm {
-    from {
-        -moz-transform: rotate(0deg);
-    }
+.fullmultiSelect > div {
+    width: 100%
+}
 
-    to {
-        -moz-transform: rotate(360deg);
-    }
+/* General */
+
+.text-align-center {
+    text-align: center !important;
+}
+
+.text-align-left {
+    text-align: left !important;
+}
+
+.text-align-right {
+    text-align: right !important;
+}
+
+.stayline {
+    white-space: nowrap
+}
+
+.display-table {
+    display: table !important
+}
+
+.display-block {
+    display: block !important
+}
+
+.no-margin {
+    margin: 0 !important
+}
+
+.no-padding {
+    padding: 0 !important
+}
+
+.margin-top-10 {
+    margin-top: 10px;
+}
+
+.margin-top-20 {
+    margin-top: 20px;
+}
+
+.margin-top-60 {
+    margin-top: 60px;
+}
+
+.margin-bottom-40 {
+    margin-bottom: 40px;
+}
+
+.margin-bottom-20 {
+    margin-bottom: 20px;
 }
 
 .margin-bottom-10 {
     margin-bottom: 10px;
 }
 
-.ks-autocomplete {
-    display: inline-block !important;
+.margin-left-5 {
+    margin-left: 5px;
 }
 
-.autoCompleteListItem a {
+.full-width {
+    width: 100% !important
+}
+
+.collapsePanel {
+    cursor: pointer
+}
+
+.pullnone {
+    float: none !important;
+    clear: both !important;
+}
+
+.color-white {
+    color: white !important;
+}
+
+.font-xs {
+    font-size: 85% !important
+}
+
+.font-sm {
+    font-size: 95% !important
+}
+
+.font-md {
+    font-size: 130% !important
+}
+
+.font-lg {
+    font-size: 160% !important
+}
+
+.font-xl {
+    font-size: 200% !important
+}
+
+.cursor-pointer {
     cursor: pointer;
-    text-decoration: none !important;
 }
 
-.autoCompleteListItem a:hover {
-    background-color: #e9f7fe;
+.tab-content {
+    border-right: 1px solid #DDDDDD;
+    border-left: 1px solid #DDDDDD;
+    border-bottom: 1px solid #DDDDDD;
+    padding: 20px 10px 10px 10px;
 }
 
-/*grid row custom background colors*/
-.grid-custom-row-color-red > [role='gridcell'] {
-    background-color: rgba(231, 76, 60, .4);
+.custom-header {
+    text-align: right;
+    color: #B3B3B3;
+    font-size: 12px;
 }
 
-.grid-custom-row-color-yellow > [role='gridcell'] {
-    background-color: rgba(244, 166, 42, .4);
+.multiselect-container input {
+    display: none
+}
+
+.btn-circle.btn-xs {
+    /*border-radius: 100%;
+    width:25px;height:25px;
+    padding:0;*/
+    width: 25px;
+    height: 25px;
+    text-align: center;
+    padding: 4px 0;
+    font-size: 12px;
+    line-height: 1.428571;
+    border-radius: 100%;
+    margin: 0 2px;
+}
+
+button, input, optgroup, select, textarea {
+    font-weight: 400;
+}
+
+table.table thead th {
+    background-color: #325276;
+    color: white !important;
+}
+
+#ticketlist tbody tr {
+    cursor: pointer;
+}
+
+.multiselected .btn-group, .multiselected button.multiselect {
+    width: 100% !important;
+}
+
+.close {
+    line-height: 0.8;
+}
+
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    background: red;
+    cursor: inherit;
+    display: block;
+}
+
+tfoot input {
+    width: 100%;
+    padding: 3px;
+    box-sizing: border-box;
+}
+
+tfoot {
+    display: table-header-group;
+}
+
+table.dataTable tfoot th, table.dataTable tfoot td {
+    border-top: 1px #dddddd solid;
+    border-right: 1px solid #dddddd;
+}
+
+table.dataTable tbody th, table.dataTable tbody td, table.dataTable thead th, table.dataTable thead td {
+    border-right: 1px solid #dddddd;
+}
+
+table.dataTable tbody th:last-child, table.dataTable tbody td:last-child, table.dataTable tfoot th:last-child, table.dataTable tfoot td:last-child, table.dataTable thead th:last-child, table.dataTable thead td:last-child {
+    border-right: 0;
+}
+
+table.dataTable thead th, table.dataTable thead td {
+    border-bottom: 0;
+}
+
+.table-menu td, .table-menu td {
+    vertical-align: middle !important
+}
+
+.table-menu tbody tr td:first-child .glyphicon {
+    line-height: inherit;
+}
+
+.table-menu tfoot tr th:first-child input, table.dataTable thead .sorting_asc:after, .table-menu thead th:first-child:after {
+    display: none !important;
+}
+
+.table-menu thead tr th:first-child {
+    padding-right: 8px;
+}
+
+.table-menu tbody tr td:first-child, .table-menu thead tr th:first-child, .table-menu tfoot tr th:first-child {
+    width: 60px;
+    text-align: center;
+}
+
+#ticketlist_filter {
+    display: none
+}
+
+@media (max-width: 768px) {
+    body.layout {
+        background: white !important;
+    }
+
+    .responseTable {
+        position: relative;
+        overflow-x: scroll;
+        width: 100%;
+        margin: auto;
+    }
+
+    .daterangepicker.opensright .ranges, .daterangepicker.opensright .calendar, .daterangepicker.openscenter .ranges, .daterangepicker.openscenter .calendar {
+        float: none
+    }
+
+    .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
+        padding: 8px 2px;
+    }
+
+    body.layout .copyright .logo {
+        max-height: 18px;
+    }
+
+    .login-container .logo {
+        width: 100%;
+    }
+
+    @media (max-height: 520px) {
+        .login-container .well {
+            background-position: 98% 95%;
+            background-size: 25%;
+        }
+    }
+
 }
